[package]
name = "twitch_events_listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
eyre = "0.6.12"
futures = "0.3.30"
reqwest = "0.11"
rpassword = "7.3.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "rt", "macros"] }
tokio-tungstenite = { version = "0.21.0", features = ["tokio-rustls", "rustls", "rustls-tls-webpki-roots"] }
twitch_api = { version = "0.7.0-rc.7", features = ["helix", "reqwest", "eventsub"] }
