[package]
name = "catch_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
eyre = "0.6.12"
reqwest = "0.12"
tokio = { version = "1.38.0", features = ["net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
